backend/tests/bruno/tada-api/negative/03-missing-name.bru
post {
  url: {{base_url}}/api/v1/auth/register
  body: json
  auth: none
}

headers {
  Content-Type: application/json
}

body:json {
  {
    "email": "no_name@tada.test",
    "password": "Password123!"
  }
}

docs {
  Register without name. Expect 400 VALIDATION_ERROR.
}

tests {
  function onResponse(req, res) {
  expect(res.status).to.equal(400);
expect(res.body.success).to.equal(false);
expect(res.body.error.code).to.equal('VALIDATION_ERROR');
  }
}
